# chaos

./: .gitignore  CMakeLists.txt  README.md  chaos.sh  grub.cfg  i686-gcc.yaml
docs/: filesystem.md
include/kernel/: MemoryManager.h  buddy_allocator.h  font.h  keys.h  memory.h  panic.h  partition.h  path.h  sh.h  tty.h
include/kernel/drivers/: ata.h  blockio.h  chario.h  device.h  fat.h  file.h  fs.h  gfx.h  interrupts.h  io.h  memory.h  paging.h  ps2_kb.h  serial.h  thread.h  vfs.h
include/kernel/sys/: types.h
include/libc/: HashMap.h  align.h  cpp.h  ctype.h  hash.h  stdio.h  string.h
scripts/: build.sh  build_kernel.sh  chaos.sh  clean.sh  cmd_qemu_image.bat  cmd_qemu_image_debug.bat  create_image.sh  dependency_list.txt  mount_image.sh  qemu_image.sh  sync_dependencies.sh  sync_image.sh  unmount_image.sh
scripts/clion/: qemu_debug_kernel.bat  qemu_kernel.bat
src/: CMakeLists.txt
src/clib/: align.cpp  ctype.cpp  printf.c  printf_common.h  stdio.cpp
src/clib/include/: align.h  cdecl.h  ctype.h  string.h
src/kernel/: CMakeLists.txt  MemoryManager.cpp  buddy_allocator.cpp  fs.cpp  fs.h  main.cpp  memory.cpp  panic.cpp  partition.c  partition.cpp  path.c  path.cpp  sh.cpp  sources.cmake  vfs.h
src/kernel/arch/i386/: flags.cmake
src/kernel/arch/i386/pc/: arch.s  ata.c  boot.s  flags.cmake  i386_exception.cpp  i386_exception.h  i386_gdt.cpp  i386_gdt.h  i386_hal.c  i386_hal.h  i386_interrupts.cpp  i386_interrupts.h  i386_main.cpp  i386_memory.cpp  i386_memory.h  i386_paging.cpp  i386_paging.h  i386_panic.cpp  i386_pic.c  i386_pic.cpp  i386_pic.h  i386_serial.cpp  i386_serial.h  i386_tasking.cpp  i386_tasking.h  i386_vga.cpp  i386_vga.h
src/kernel/drivers/: ata.c  ata.cpp  blockio.c  blockio.cpp  chario.c  device.cpp  fat.c  fat.cpp  fs.c  fs.cpp  gfx.cpp  interrupts.cpp  io.cpp  memory.cpp  paging.cpp  ps2_kb.cpp  serial.cpp  thread.cpp  vfs.c  vfs.cpp
src/kernel/font/: font.cpp  make_object.sh
src/kernel/include/: buddy_allocator.h  file.h  memory.h  vfs.h
src/libc/: CMakeLists.txt  HashMap.cpp  align.cpp  cpp.cpp  ctype.cpp  hash.cpp  printf.c  printf_common.c  printf_common.h  snprintf.c  sources.cmake  sprintf.c  stdio.cpp  string.cpp
